--- a/style.css
+++ b/style.css
@@ -5,7 +5,15 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+    /* scroll-snap-type: both mandatory; */
+}
+
 header {
+    position: fixed;
+    height: 10vh;
+    width: 100vw;
     color: rgb(84, 84, 187);
     text-align: center;
     font-size: 2.5rem;
@@ -43,23 +51,25 @@ header {
     display: flex;
     overflow: hidden;
     overflow-x: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
 
 }
 
 .chapter {
     display: flex;
-    flex-direction: row;
-    min-width: 99%;
+    min-width: 100%;
     height: 85vh;
     margin: 0.2rem;
     overflow: hidden;
     overflow-x: scroll;
+    scroll-snap-type: x mandatory;
 }
 
 .paragraph {
     color: rgb(109, 107, 107);
     text-align: start;
-    min-width: 40vw;
+    min-width: 95%;
     font-size: 1.2em;
     margin: 1rem;
     padding: 1rem;
