--- a/style.css
+++ b/style.css
@@ -48,8 +48,11 @@ header {
     width: 85vw;
     height: 90vh;
     margin: 0.5rem;
+    align-items: center;
     display: flex;
+    flex-direction: row;
     overflow: hidden;
+    -webkit-box-align: center;
     overflow-x: scroll;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
@@ -63,6 +66,8 @@ header {
     margin: 0.2rem;
     overflow: hidden;
     overflow-x: scroll;
+    scroll-snap-align: center;
+    scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
 }
 
@@ -75,6 +80,10 @@ header {
     padding: 1rem;
     box-shadow: 0px 0px 10px lightblue;
     border-radius: 10px;
+    scroll-snap-align: center;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+
 }
 
 h1,
